--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -391,7 +391,7 @@ Then we create a 5-fold cross validation object, and put the recipe and model sp
 in a workflow.
 \index{tidymodels}\index{recipe}\index{workflow}
 
-```{r 07-choose-k-knn}
+```{r 07-choose-k-knn, results = 'hide', echo = TRUE}
 sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) |>
   step_scale(all_predictors()) |>
   step_center(all_predictors())
@@ -408,6 +408,10 @@ sacr_wkflw <- workflow() |>
   add_model(sacr_spec)
 
 sacr_wkflw
+```
+
+```{r echo = FALSE}
+print_tidymodels(sacr_wkflw)
 ```
 
 Next we run cross validation for a grid of numbers of neighbors ranging from 1 to 200. 
