added setup code

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -3,6 +3,7 @@
 ```{r classification2-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(gridExtra)
 library(cowplot)
+library(stringr)
 
 knitr::opts_chunk$set(fig.align = "center")
 
