--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -3,9 +3,27 @@
 ```{r regression1-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(knitr)
 library(plotly)
+library(stringr)
 
 knitr::opts_chunk$set(fig.align = "center")
 reticulate::use_miniconda('r-reticulate')
+
+print_tidymodels <- function(tidymodels_object) {
+  if(!is_latex_output()) {
+    tidymodels_object
+  } else {
+    output <- capture.output(tidymodels_object)
+    
+    for (i in seq_along(output)) {
+      if (nchar(output[i]) <= 80) {
+        cat(output[i], sep = "\n")
+      } else {
+        cat(str_sub(output[i], start = 1, end = 80), sep = "\n")
+        cat(str_sub(output[i], start = 81, end = nchar(output[i])), sep = "\n")
+      }
+    }
+  }
+}
 ```
 
 ## Overview 
