fixed font size issue with tidy data graphic

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -244,8 +244,8 @@ Figure \@ref(fig:02-tidy-image) demonstrates a tidy data set that satisfies thes
 three criteria. 
 
 ``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data satisfies three criteria.", fig.retina = 2, out.width = "100%"}
-image_read("img/tidy_data.jpeg") %>%
-  image_crop("3632x530")
+image_read("img/tidy_data/tidy_data.001.jpeg") |>
+  image_crop("3632x1400")
 ```
 
 There are many good reasons for making sure your data are tidy as a first step in your analysis.
