--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -1369,7 +1369,9 @@ wkflw_plot <-
                            color = Class), 
              alpha = 0.02, 
              size = 5) +
-  labs(color = "Diagnosis") +
+  labs(color = "Diagnosis", 
+       x = "Area (standardized)", 
+       y = "Smoothness (standardized)") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
                      values = c("orange2", "steelblue2"))
 
