--- a/viz.Rmd
+++ b/viz.Rmd
@@ -898,7 +898,7 @@ the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom
 shown in Figure \@ref(fig:03-data-islands-bar).
 \index{ggplot!geom\_bar}
 
-```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.width=5, fig.height=4, fig.align = "center", fig.cap = "Bar plot of all Earth's landmasses' size with squished labels."}
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.width=5, fig.height=3, fig.align = "center", fig.cap = "Bar plot of all Earth's landmasses' size with squished labels."}
 islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
   geom_bar(stat = "identity")
 
@@ -960,7 +960,7 @@ Thus we use the `fill` argument inside `labs` to change that to "Type."
 Finally, we again \index{ggplot!reorder} use the `theme` function 
 to change the font size.
 
-```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width=8, fig.align="center", fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels."}
+```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width=5, fig.height=3, fig.align="center", fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels."}
 islands_bar <- ggplot(islands_top12, 
                       aes(x = size,
                           y = fct_reorder(landmass, size, .desc = TRUE), 
