added Melissa's dedication again...

--- a/pdf/latex/before_body.tex
+++ b/pdf/latex/before_body.tex
@@ -12,6 +12,9 @@ For my husband Curtis and daughter Rowan. Thank-you for your love
 
 To mom and dad: here's a book. Pretty neat, eh? Love you guys.
 \linebreak-- Trevor
+
+To mom and dad, thank you for all your love and support.
+\linebreak-- Melissa
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
