minor typo fix in clustering

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -128,8 +128,8 @@ We will discuss scaling for K-means in more detail later in this chapter.
 
 Before we get started, we will load the `tidyverse` metapackage 
 as well as set a random seed.
-This will ensure we have access to the functions we need, 
-and help make our analysis will be reproducible.
+This will ensure we have access to the functions we need 
+and that our analysis will be reproducible.
 As we will learn in more detail later in the chapter, 
 setting the seed here is important 
 because the K-means clustering algorithm uses random numbers.
