adding commas and hyphens to acknowledgements

--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -7,12 +7,12 @@ for DSCI 100, a new introductory data science course
 at the University of British Columbia (UBC).
 Several faculty members in the UBC Department of Statistics 
 were pivotal in shaping the direction of that course, 
-and as such contributed greatly to the broad structure and 
+and as such, contributed greatly to the broad structure and 
 list of topics in this book. We would especially like to thank Matías
 Salibían-Barrera for his mentorship during the initial development and roll-out
 of both DSCI 100 and this book. His door was always open when
 we needed to chat about how to
-best introduce and teach data science our first year students.
+best introduce and teach data science to our first-year students.
 
 We also owe a debt of gratitude to all of the students of DSCI 100 over the past
 few years. They provided invaluable feedback on the book and worksheets; 
