--- a/authors.Rmd
+++ b/authors.Rmd
@@ -1,6 +1,6 @@
 # About the authors {-}
 
-Tiffany Timbers is an Assistant Professor of Teaching in the Department of
+**Tiffany Timbers** is an Assistant Professor of Teaching in the Department of
 Statistics and Co-Director for the Master of Data Science program (Vancouver
 Option) at the University of British Columbia. In these roles she teaches and
 develops curriculum around the responsible application of Data Science to solve
@@ -9,7 +9,7 @@ course on collaborative software development, which focuses on teaching how to
 create R and Python packages using modern tools and workflows.
 
 
-Trevor Campbell is an Assistant Professor in the Department of Statistics at
+**Trevor Campbell** is an Assistant Professor in the Department of Statistics at
 the University of British Columbia. His research focuses on automated, scalable
 Bayesian inference algorithms, Bayesian nonparametrics, streaming data, and
 Bayesian theory. He was previously a postdoctoral associate advised by Tamara
@@ -20,7 +20,7 @@ Systems (LIDS) at MIT, and before that he was in the Engineering Science
 program at the University of Toronto.
 
 
-Melissa Lee is an Assistant Professor of Teaching in the Department of
+**Melissa Lee** is an Assistant Professor of Teaching in the Department of
 Statistics at the University of British Columbia. She teaches and develops
 curriculum for undergraduate statistics and data science courses. Her work
 focuses on student-centered approaches to teaching, developing and assessing
